package com.example.ezvault;

import android.app.Application;

import dagger.hilt.android.HiltAndroidApp;

@HiltAndroidApp
public class EZVaultApplication extends Application { }